      Thanks, Bastian Blank.  (Closes: #507763)

  * data/changelog-file/ubuntu-dists:
    + [RA] New shared list of Ubuntu distributions.

  * frontend/lintian:
    + [RA] Recognize Ubuntu native packages by the target distribution and
      check them against the correct set of distributions.  Based on a
      patch by Adrien Cunin.  (Closes: #507740)

  * lib/Lintian/Data.pm:
    + [RA] New all() method that returns all valid keywords.

  * reporting/templates/maintainer.tmpl:
    + [ADB] Print tags affecting udeb packages under a heading for that
      package, rather than merging them in to whichever binary package
      was last displayed (or the source package if the udeb is first
      alphabetically).
    + [ADB] Separate tags affecting a binary package from those of a source
      package with the same name when the binary is the first package produced
      from the source for which there are issues.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 14 Dec 2008 17:20:38 +0000

lintian (2.1.2) unstable; urgency=low

  * frontend/lintian:
    + [ADB] Accept "html" as a valid argument for --color again.

  * lib/Lintian/Output.pm:
    + [ADB] Re-introduce support for HTML coloured output.  (Closes: #508341)

  * man/lintian.1:
    + [ADB] Document that "--color=html" is supported again.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 10 Dec 2008 20:12:48 +0000

lintian (2.1.1) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - latest-debian-changelog-entry-changed-to-native

  * checks/changelog{,.desc}:
    + [ADB] Warn when the version of a package changes to Debian native.
      Based on a patch by Michal Čihař.  (Closes: #504070)
  * checks/fields.desc:
    + [RA] Improve the recommendation for dependencies in debug packages
      to include the case of a debug package corresponding to multiple
      other packages.
  * checks/files:
    + [ADB] Add tests for several more embedded PHP libraries.  Patch